# codemod-pilot

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_language.md
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_scan.rs
crates/codemod-cli/: Cargo.toml
crates/codemod-cli/src/: config.rs  main.rs
crates/codemod-cli/src/commands/: apply.rs  check.rs  export.rs  learn.rs  list.rs  mod.rs  scan.rs
crates/codemod-cli/src/output/: diff.rs  interactive.rs  mod.rs  report.rs
crates/codemod-core/: Cargo.toml
crates/codemod-core/src/: error.rs  language.rs  lib.rs
crates/codemod-core/src/pattern/: inferrer.rs  matcher.rs  mod.rs  validator.rs
crates/codemod-core/src/rule/: builtin.rs  mod.rs  schema.rs
crates/codemod-core/src/scanner/: mod.rs  parallel.rs  walker.rs
crates/codemod-core/src/transform/: applier.rs  conflict.rs  mod.rs  rollback.rs
crates/codemod-core/tests/: apply_test.rs  ci_mode_test.rs  learn_test.rs
crates/codemod-languages/: Cargo.toml
crates/codemod-languages/src/: javascript.rs  lib.rs  typescript.rs  utils.rs
docs/: adding-a-language.md  architecture.md  how-it-works.md  rule-format.md  supported-languages.md
docs/examples/: api-rename.md  react-migration.md
rules/common/: rename-symbol.yaml
rules/typescript/: migrate-import-syntax.yaml  optional-chaining.yaml  replace-console-log.yaml  replace-deprecated-api.yaml
scripts/: install.sh  setup-dev.sh
tests/fixtures/change-signature/: after.ts  before.ts
tests/fixtures/migrate-library/: after.js  before.js
tests/fixtures/rename-function/: after.ts  before.ts
tests/fixtures/replace-console/: after.ts  before.ts
tests/integration/: ci_mode_test.rs
