[workspace]
resolver = "2"
members = [
    "crates/codemod-core",
    "crates/codemod-cli",
    "crates/codemod-languages",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["codemod-pilot contributors"]
license = "Apache-2.0"
repository = "https://github.com/codemod-pilot/codemod-pilot"
description = "Transform your codebase by example. No AST knowledge required."
rust-version = "1.75.0"

[workspace.dependencies]
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive", "color"] }
colored = "2.1"
similar = "2.6"
walkdir = "2.5"
globset = "0.4"
rayon = "1.10"
indicatif = "0.17"
dialoguer = "0.11"
log = "0.4"
env_logger = "0.11"
