[package]
name = "codemod-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI interface for codemod-pilot — transform your codebase by example"

[[bin]]
name = "codemod-pilot"
path = "src/main.rs"

[dependencies]
codemod-core = { path = "../codemod-core", version = "0.1.0" }
codemod-languages = { path = "../codemod-languages", version = "0.1.0" }
clap.workspace = true
colored.workspace = true
similar.workspace = true
indicatif.workspace = true
dialoguer.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
log.workspace = true
env_logger.workspace = true
chrono.workspace = true
