[package]
name = "codemod-core"
version = "0.1.0"
edition = "2021"
description = "Core engine for codemod-pilot: pattern inference, matching, and transformation"
license = "MIT"

[dependencies]
tree-sitter = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
walkdir = "2"
globset = "0.4"
rayon = "1"
similar = "2"
log = "0.4"
chrono = "0.4"
