[package]
name = "codemod-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core engine for codemod-pilot: pattern inference, matching, and transformation"

[dependencies]
tree-sitter.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
walkdir.workspace = true
globset.workspace = true
rayon.workspace = true
similar.workspace = true
log.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3.12"
