[package]
name = "codemod-languages"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Language support plugins for codemod-pilot"

[dependencies]
codemod-core = { path = "../codemod-core" }
tree-sitter.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
anyhow.workspace = true
log.workspace = true

[dev-dependencies]
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
