[package]
name = "codemod-languages"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Language support plugins for codemod-pilot"

[dependencies]
codemod-core = { path = "../codemod-core", version = "0.1.2" }
tree-sitter.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
anyhow.workspace = true
log.workspace = true

[dev-dependencies]
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
